--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -6,6 +6,9 @@
 {% endcomment %}
 
 <script src="{{ 'cart.js' | asset_url }}" defer="defer"></script>
+{{ 'quick-add.css' | asset_url | stylesheet_tag }}
+<script src="{{ 'quick-add.js' | asset_url }}" defer="defer"></script>
+<script src="{{ 'cstm_product-form.js' | asset_url }}" defer="defer"></script>
 
 <style>
   .drawer {
@@ -66,6 +69,18 @@
           {% render 'icon-close' %}
         </button>
       </div>
+
+      <!-- Custom Text -->
+      {%- if cart != empty -%}
+        <div class="cstm_cart_text">
+          <span class="cstm_cart_icon">
+            {% render 'cstm_cart_icon' %}
+          </span>
+          <p><strong>Gute Wahl!</strong> Deine Bestellung ist in 1-2 Werktagen bei Dir zu Hause.</p>
+        </div>
+      {% endif %}
+      <!-- Custom Text -->
+
       <cart-drawer-items
         {% if cart == empty %}
           class=" is-empty"
@@ -81,32 +96,34 @@
             {%- if cart != empty -%}
               <div class="drawer__cart-items-wrapper">
                 <table class="cart-items" role="table">
-                  <thead role="rowgroup">
-                    <tr role="row">
-                      <th id="CartDrawer-ColumnProductImage" role="columnheader">
-                        <span class="visually-hidden">{{ 'sections.cart.headings.image' | t }}</span>
-                      </th>
-                      <th
-                        id="CartDrawer-ColumnProduct"
-                        class="caption-with-letter-spacing"
-                        scope="col"
-                        role="columnheader"
-                      >
-                        {{ 'sections.cart.headings.product' | t }}
-                      </th>
-                      <th
-                        id="CartDrawer-ColumnTotal"
-                        class="right caption-with-letter-spacing"
-                        scope="col"
-                        role="columnheader"
-                      >
-                        {{ 'sections.cart.headings.total' | t }}
-                      </th>
-                      <th id="CartDrawer-ColumnQuantity" role="columnheader">
-                        <span class="visually-hidden">{{ 'sections.cart.headings.quantity' | t }}</span>
-                      </th>
-                    </tr>
-                  </thead>
+                  {% comment %}
+                    <thead role="rowgroup">
+                      <tr role="row">
+                        <th id="CartDrawer-ColumnProductImage" role="columnheader">
+                          <span class="visually-hidden">{{ 'sections.cart.headings.image' | t }}</span>
+                        </th>
+                        <th
+                          id="CartDrawer-ColumnProduct"
+                          class="caption-with-letter-spacing"
+                          scope="col"
+                          role="columnheader"
+                        >
+                          {{ 'sections.cart.headings.product' | t }}
+                        </th>
+                        <th
+                          id="CartDrawer-ColumnTotal"
+                          class="right caption-with-letter-spacing"
+                          scope="col"
+                          role="columnheader"
+                        >
+                          {{ 'sections.cart.headings.total' | t }}
+                        </th>
+                        <th id="CartDrawer-ColumnQuantity" role="columnheader">
+                          <span class="visually-hidden">{{ 'sections.cart.headings.quantity' | t }}</span>
+                        </th>
+                      </tr>
+                    </thead>
+                  {% endcomment %}
 
                   <tbody role="rowgroup">
                     {%- for item in cart.items -%}
@@ -350,6 +367,27 @@
           <div id="CartDrawer-CartErrors" role="alert"></div>
         </form>
       </cart-drawer-items>
+
+      {% comment %}Custom Upsell in cart footer  .... and forloop.first{% endcomment %}
+      <div class="cstm_cart_upsell">
+        <p class="main_head">Passend dazu:</p>
+        <div class="upsell_main">
+          {% for item in cart.items %}
+            {% assign upsell_product = item.product.metafields.custom.upsell_products.value %}
+            {% if upsell_product != blank %}
+              {% for product in upsell_product %}
+                {% if product.selected_or_first_available_variant.available %}
+                  <div class="upsell_single">
+                    {% render 'cstm_upsell_card', card_product: product, section_id: section.id %}
+                  </div>
+                {% endif %}
+              {% endfor %}
+            {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+      {% comment %}Custom Upsell in cart footer{% endcomment %}
+
       <div class="drawer__footer">
         {%- if settings.show_cart_note -%}
           <details id="Details-CartDrawer">
